--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,11 @@ rdict = "*"
 
 # Direct Git dependency for TTS
 TTS = {git = "https://github.com/obahamonde/TTS-la.git"}
+boto3 = "^1.35.63"
+assemblyai = "^0.35.1"
+
+[tool.poetry.group.dev.dependencies]
+boto3-stubs = {extras = ["all"], version = "^1.35.63"}
 
 [build-system]
 requires = ["poetry-core>=1.5.0"]
